feat: edit font color in code block

--- a/.vitepress/theme/src/styles/index.less
+++ b/.vitepress/theme/src/styles/index.less
@@ -5,6 +5,7 @@
   --vp-code-block-divider-color: rgb(30, 30, 30);
   --vp-code-lang-color: rgba(235, 235, 245, 0.38);
   --vp-code-line-number-color: rgba(235, 235, 245, 0.38);
+  --shiki-light: #D4D4D4;
   --font-family-number: 'Noto Sans', 'Roboto Mono', 'Roboto', 'Times New Roman';
 }
 
