--- a/.vitepress/theme/src/styles/index.less
+++ b/.vitepress/theme/src/styles/index.less
@@ -5,7 +5,7 @@
   --vp-code-block-divider-color: rgb(30, 30, 30);
   --vp-code-lang-color: rgba(235, 235, 245, 0.38);
   --vp-code-line-number-color: rgba(235, 235, 245, 0.38);
-  --shiki-light: #D4D4D4;
+  --shiki-light: #d4d4d4;
   --font-family-number: 'Noto Sans', 'Roboto Mono', 'Roboto', 'Times New Roman';
 }
 
@@ -72,21 +72,21 @@ pre::-webkit-scrollbar {
     max-width: 75%;
   }
 
-  // 标题样式
-  h1 {
-    font-size: 1.8rem;
-    padding-bottom: 14px;
+  p {
+    margin: 12px 0;
   }
 
+  // 标题样式
   h2 {
-    margin: 0;
-    padding: 14px 0;
+    margin-top: 20px;
+    padding: 0 0 14px;
     border: none;
     border-bottom: 1px solid var(--vp-c-divider);
   }
 
   h3 {
-    margin-top: 20px;
+    font-size: 18px;
+    margin-top: 12px;
   }
 
   // 标题前 # 的位置
