feat: remove navbar divider

--- a/.vitepress/theme/src/styles/index.less
+++ b/.vitepress/theme/src/styles/index.less
@@ -45,6 +45,10 @@ pre::-webkit-scrollbar {
 .VPNavBar,
 .VPFooter {
   border: none !important;
+
+  .divider {
+    display: none;
+  }
 }
 
 // Footer 链接样式
