fix: navbar transition bug

--- a/.vitepress/theme/src/styles/index.less
+++ b/.vitepress/theme/src/styles/index.less
@@ -41,9 +41,10 @@ pre::-webkit-scrollbar {
   z-index: 31;
 }
 
-// 去除 Nav Footer 边框
+// 去除 Nav Footer 边框/过渡
 .VPNavBar,
 .VPFooter {
+  transition: none !important;
   border: none !important;
 
   .divider {
