feat: optimize ol ul p margin style

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -77,8 +77,10 @@ pre::-webkit-scrollbar {
     max-width: 75%;
   }
 
+  ol,
+  ul,
   p {
-    margin: 12px 0;
+    margin: 8px 0;
   }
 
   // 标题样式
