feat: optimize number font-family

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -7,7 +7,7 @@
   --vp-code-lang-color: rgba(235, 235, 245, 0.38);
   --vp-code-line-number-color: rgba(235, 235, 245, 0.38);
   --shiki-light: #d4d4d4;
-  --font-family-number: 'Noto Sans', 'Roboto Mono', 'Roboto', 'Times New Roman';
+  --font-family-number: 'Noto Sans', 'Roboto Mono', 'Roboto', 'Microsoft YaHei', 'Arial', 'sans-serif';
 }
 
 // 整体布局
