feat: optimize li > p margin style

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -82,6 +82,10 @@ pre::-webkit-scrollbar {
     margin: 12px 0;
   }
 
+  li p {
+    margin: 8px 0;
+  }
+
   // 标题样式
   h2 {
     margin-top: 20px;
