--- a/src/styles/post.less
+++ b/src/styles/post.less
@@ -11,6 +11,7 @@
           top: 0;
           left: 50%;
           transform: translateX(34rem);
+          z-index: 15;
         }
 
         & > .content {
