--- a/src/styles/page.less
+++ b/src/styles/page.less
@@ -1,16 +1,16 @@
-.main-content {
+.ZCContent {
   max-width: 60rem;
   margin: 0 auto;
 }
 
 @media (max-width: 768px) {
-  .main-container {
+  .ZCContainer {
     padding: 0 24px;
   }
 }
 
 @media (min-width: 768px) and (max-width: 1030px) {
-  .main-container {
+  .ZCContainer {
     padding: 0 32px;
   }
 }
