feat: support category feature

--- a/src/styles/iconfont.less
+++ b/src/styles/iconfont.less
@@ -1,12 +1,12 @@
 @font-face {
-  font-family: 'iconfont';  /* Project id 4531970 */
-  src: url('//at.alicdn.com/t/c/font_4531970_j5kbdfqwc18.woff2?t=1716355485350') format('woff2'),
-       url('//at.alicdn.com/t/c/font_4531970_j5kbdfqwc18.woff?t=1716355485350') format('woff'),
-       url('//at.alicdn.com/t/c/font_4531970_j5kbdfqwc18.ttf?t=1716355485350') format('truetype');
+  font-family: 'iconfont'; /* Project id 4531970 */
+  src: url('//at.alicdn.com/t/c/font_4531970_vmrkflzra6k.woff2?t=1719061831704') format('woff2'),
+    url('//at.alicdn.com/t/c/font_4531970_vmrkflzra6k.woff?t=1719061831704') format('woff'),
+    url('//at.alicdn.com/t/c/font_4531970_vmrkflzra6k.ttf?t=1719061831704') format('truetype');
 }
 
 .iconfont {
-  font-family: "iconfont" !important;
+  font-family: 'iconfont' !important;
   font-size: 16px;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
