feat: optimize a p h3 style

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -67,7 +67,7 @@ pre::-webkit-scrollbar {
 .vp-doc {
   // 去除 a 下划线
   a {
-    text-decoration: none;
+    // text-decoration: none;
   }
 
   img {
@@ -79,7 +79,7 @@ pre::-webkit-scrollbar {
   }
 
   p {
-    margin: 12px 0;
+    // margin: 12px 0;
   }
 
   li p {
@@ -95,8 +95,8 @@ pre::-webkit-scrollbar {
   }
 
   h3 {
-    font-size: 18px;
-    margin-top: 12px;
+    // font-size: 18px;
+    margin-top: 16px;
   }
 
   // 标题前 # 的位置
