refactor: using iconify instead of iconfont

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -15,6 +15,17 @@
   --vp-local-nav-bg-color: rgba(27, 27, 31, 0.7);
 }
 
+svg {
+  display: inline-block;
+}
+
+.iconify {
+  width: 16px;
+  height: 16px;
+  // color: var(--vp-c-text-1);
+  vertical-align: -0.2rem;
+}
+
 // 整体布局
 .Layout {
   min-height: 100dvh !important;
