feat: page transition progress bar

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -7,6 +7,7 @@
   --vp-local-nav-bg-color: rgba(255, 255, 255, 0.7);
   --vp-c-bg-rgb: 255, 255, 255;
   --vp-c-bg-reverse-rgb: 27, 27, 31;
+  --bprogress-color: var(--vp-c-brand-3); // 进度条颜色
 }
 
 .dark {
