--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -22,6 +22,11 @@ svg {
   display: inline-block;
 }
 
+// 移除编辑信息
+.edit-info {
+  display: none !important;
+}
+
 .iconify {
   width: 16px;
   height: 16px;
