feat: optimize the post list style

--- a/src/styles/page.less
+++ b/src/styles/page.less
@@ -5,12 +5,12 @@
 
 @media (max-width: 768px) {
   .ZCContainer {
-    padding: 0 24px;
+    padding: 0 1rem;
   }
 }
 
 @media (min-width: 768px) and (max-width: 1030px) {
   .ZCContainer {
-    padding: 0 32px;
+    padding: 0 2rem;
   }
 }
