--- a/src/styles/fancybox.less
+++ b/src/styles/fancybox.less
@@ -1,5 +1,8 @@
 .fancybox__container {
   --fancybox-backdrop-bg: none;
+  --f-caption-color: var(--vp-c-text-1);
+  --f-thumb-selected-shadow: inset 0 0 0 2px var(--vp-c-brand-1);
+
   .f-carousel__toolbar {
     --f-button-bg: none;
     --f-button-hover-bg: rgba(var(--vp-c-bg-reverse-rgb), 0.1);
@@ -7,6 +10,10 @@
     --f-button-hover-color: rgba(var(--vp-c-bg-reverse-rgb), 1);
     --f-button-svg-disabled-opacity: 0.2;
     background: rgba(var(--vp-c-bg-rgb), 0.2);
+
+    .f-counter {
+      color: var(--vp-c-text-1);
+    }
   }
 
   &::before {
@@ -22,15 +29,7 @@
 
   .f-panzoom__content {
     object-fit: initial;
-    border: solid 1px rgba(var(--vp-c-bg-reverse-rgb), 0.5);
     border-radius: 10px;
-  }
-
-  .is-classic .is-nav-selected .f-thumbs__slide__button::after {
-    border-color: var(--vp-c-brand-1);
-  }
-
-  .f-caption {
-    color: var(--vp-c-text-1);
+    box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.2);
   }
 }
