--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -9,8 +9,8 @@
   // Geist 字体设置
   --vp-font-family-base: 'Geist', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
     'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
-  --vp-font-family-mono: 'Geist Mono', ui-monospace, SFMono-Regular, 'SF Mono', Menlo, Monaco, Consolas,
-    'Liberation Mono', 'Courier New', monospace;
+  // --vp-font-family-mono: 'Geist Mono', ui-monospace, SFMono-Regular, 'SF Mono', Menlo, Monaco, Consolas,
+  //   'Liberation Mono', 'Courier New', monospace;
   --font-family-number: var(--vp-font-family-base);
   // Nav 透明度
   --vp-nav-bg-color: rgba(255, 255, 255, 0.7);
